--- a/axelor-business-support/src/main/resources/views/ProjectTask.xml
+++ b/axelor-business-support/src/main/resources/views/ProjectTask.xml
@@ -17,7 +17,7 @@
 
   <grid name="project-task-client-grid" title="Tasks"
     model="com.axelor.apps.project.db.ProjectTask" edit-icon="true" orderBy="taskDate">
-    <hilite if="$get('status.isCompleted') == true" color="success"/>
+    <hilite if="$get('status.id') == $get('project.completedTaskStatus.id')" color="success"/>
     <hilite if="$moment(taskEndDate).diff(todayDate,'days') &lt; 0" color="danger"/>
     <hilite if="$get('priority.technicalTypeSelect') == 4" color="warning"/>
     <field name="name"/>
@@ -28,7 +28,7 @@
     <field name="targetVersion"/>
     <field name="taskEndDate" hidden="true"/>
     <field name="priority.technicalTypeSelect" hidden="true"/>
-    <field name="status.isCompleted" hidden="true"/>
+    <field name="project.completedTaskStatus.id" hidden="true"/>
   </grid>
 
   <form name="project-task-client-form" title="Ticket"
