--- a/axelor-project/src/main/resources/views/Project.xml
+++ b/axelor-project/src/main/resources/views/Project.xml
@@ -460,8 +460,11 @@
           if-module="axelor-human-resource"
           onChange="action-project-record-reset-value-is-show-timespent,action-project-record-is-show-timespent-reset-values"/>
         <panel name="fieldsToDisplay" title="Fields to display" colSpan="12">
-          <field name="isShowStatus" colSpan="4" widget="inline-checkbox"
+          <field name="isShowStatus" widget="inline-checkbox"
             onChange="action-project-record-status-reset-values"/>
+          <field name="completedTaskStatus" grid-view="task-status-grid"
+            form-view="task-status-form" showIf="isShowStatus" requiredIf="isShowStatus"
+            onSelect="action-project-attrs-set-completed-task-status-domain"/>
           <field name="projectTaskStatusSet" widget="TagSelect" colSpan="12"
             showIf="isShowStatus" requiredIf="isShowStatus"/>
           <field name="isShowPriority" colSpan="4" widget="inline-checkbox"
@@ -969,6 +972,8 @@
       expr="eval: __config__.app.getApp('project')?.getDefaultTaskStatusSet()"/>
     <field name="projectTaskPrioritySet"
       expr="eval: __config__.app.getApp('project')?.getDefaultPrioritySet()"/>
+    <field name="completedTaskStatus"
+      expr="eval: __config__.app.getApp('project')?.completedTaskStatus"/>
   </action-record>
 
   <action-validate name="action-wizard-validate-user-select">
@@ -1141,6 +1146,11 @@
     <error message="Please fill canceled project status in App Project configuration."
       if="!__config__.app.getApp('project')?.canceledProjectStatus"/>
   </action-validate>
+
+  <action-attrs name="action-project-attrs-set-completed-task-status-domain">
+    <attribute name="domain" for="completedTaskStatus"
+      expr="eval: 'self.isCompleted = true AND self.id IN (' + projectTaskStatusSet?.collect{ it.id }?.join(',') + ')'"/>
+  </action-attrs>
 
   <search-filters name="project-filters" model="com.axelor.apps.project.db.Project"
     title="Project filters">
