--- a/axelor-human-resource/src/main/resources/views/Menu.xml
+++ b/axelor-human-resource/src/main/resources/views/Menu.xml
@@ -78,9 +78,14 @@
     <domain>self.expense IS NULL</domain>
   </action-view>
 
-  <menuitem name="all-my-timesheet" parent="my-hr-root" title="Timesheets"
-    action="action.timesheet.view.my.timesheet" order="400" if="__config__.app.isApp('timesheet')"
-    icon="clock" icon-background="#84429f"/>
+  <menuitem name="my-hr-timesheet-root" parent="my-hr-root" title="Timesheets"
+    if="__config__.app.isApp('timesheet')" icon="clock" icon-background="#84429f" order="400"/>
+
+  <menuitem name="edit-timesheet" parent="my-hr-timesheet-root"
+    title="Complete my Timesheet" action="edit.timesheet" order="100"/>
+
+  <menuitem name="all-my-timesheet" parent="my-hr-timesheet-root" title="Timesheets"
+    action="action.timesheet.view.my.timesheet" order="200"/>
 
   <action-view name="action.timesheet.view.my.timesheet"
     model="com.axelor.apps.hr.db.Timesheet" title="My Timesheets">
