--- a/axelor-human-resource/src/main/resources/views/Timesheet.xml
+++ b/axelor-human-resource/src/main/resources/views/Timesheet.xml
@@ -45,7 +45,7 @@
   </grid>
 
   <grid name="my-timesheets-grid" title="My Timesheets" model="com.axelor.apps.hr.db.Timesheet"
-    canNew="true" orderBy="-fromDate">
+    canNew="false" orderBy="-fromDate">
     <menubar>
       <menu name="timesheetToolsMenu" title="Tools" icon="fa-wrench" showTitle="true">
         <item name="seeTimesheetLinesItem" action="action-timesheet-see-timesheet-lines"
