--- a/axelor-human-resource/src/main/resources/views/Menu.xml
+++ b/axelor-human-resource/src/main/resources/views/Menu.xml
@@ -32,9 +32,15 @@
     <context name="to_justify_leave_reason" expr="eval: false"/>
   </action-view>
 
-  <menuitem name="all-expense" parent="my-hr-root" title="Expenses" action="expense.all"
-    order="300" if="__config__.app.isApp('expense')" icon="credit-card-fill"
-    icon-background="#84429f"/>
+  <menuitem name="my-hr-expense-root" parent="my-hr-root" title="Expenses"
+    if="__config__.app.isApp('expense')" icon="credit-card-fill" icon-background="#84429f"
+    order="300"/>
+
+  <menuitem name="edit-expense" parent="my-hr-expense-root" title="Complete my expense"
+    action="edit.expense" order="100"/>
+
+  <menuitem name="all-expense" parent="my-hr-expense-root" title="Expenses"
+    action="expense.all" order="200"/>
 
   <action-view name="expense.all" model="com.axelor.apps.hr.db.Expense"
     title="My Expenses">
@@ -48,7 +54,7 @@
     <context name="_isExpenseDeclaration" expr="eval: false"/>
   </action-view>
 
-  <menuitem name="my-hr-root-expense-declaration" parent="my-hr-root"
+  <menuitem name="my-hr-root-expense-declaration" parent="my-hr-expense-root"
     title="Expenses declaration" action="my.hr.root.expense.declaration" order="310"
     if="__config__.app.isApp('expense') &amp;&amp; __config__.app.getApp('expense')?.enableExpenseDeclaration"
     icon="credit-card-fill" icon-background="#84429f"/>
@@ -66,7 +72,7 @@
     <context name="_isExpenseDeclaration" expr="eval: true"/>
   </action-view>
 
-  <menuitem name="line-expense" parent="my-hr-root" title="OrphanExpenseLine.title"
+  <menuitem name="line-expense" parent="my-hr-expense-root" title="OrphanExpenseLine.title"
     action="expense.line" order="350"
     if="__config__.app.isApp('expense') &amp;&amp; __config__.app.getApp('expense')?.getIsOrphanExpenseLineManaged()"
     icon="fa-receipt" icon-background="#84429f"/>
